--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>blog</groupId>
-    <artifactId>blog</artifactId>
+    <artifactId>ashkritblog</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -27,7 +27,12 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>1.9.1</version>
         </dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+			<scope>test</scope>
+		</dependency>
 
     </dependencies>
 
